# gamecards

./: .bumpversion.cfg  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  build.xml  gamecards.py  pyproject.toml  setup.py  test_gamecards.py
examples/: cards.css  cards.csv  cards.html  cards.tpl
gamecards/: gamecards.py
tests/: test_gamecards.py
